-- The name of the package.
Name:                htee

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1

-- A short (one-line) description of the package.
Synopsis:            This is the Unix Tee implemented in Haskell.

-- A longer description of the package.
-- Description:         

-- URL for the project homepage or repository.
Homepage:            https://github.com/robertmassaioli/htee

-- The license under which the package is released.
License:             BSD3

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Robert Massaioli

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:          robertmassaioli@gmail.com

-- A copyright notice.
-- Copyright:           

-- Stability of the pakcage (experimental, provisional, stable...)
Stability:           Experimental

Category:            System

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Executable htee
  -- .hs or .lhs file containing the Main module.
  Main-is: Main.hs             
  
  -- Packages needed in order to build this package.
  Build-depends: base, directory >= 1.1, filepath >= 1.2
